--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 broker.host=localhost
-broker.username=user
-broker.password=pDCNHoRq3kaR
+broker.username=somas3k
+broker.password=Sabina95
 broker.dispatcherExchangeName=CTSD
 broker.registerExchangeName=CTSR
 broker.dispatcherKey=broker
