Add BatchScheduler support to Broker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 broker.host=localhost
-broker.username=user
-broker.password=pDCNHoRq3kaR
+#broker.username=user
+broker.username=somas3k
+#broker.password=pDCNHoRq3kaR
+broker.password=Sabina95
 broker.dispatcherExchangeName=CTSD
 broker.registerExchangeName=CTSR
 broker.dispatcherKey=broker
 broker.registerKey=register
+broker.schedulerName=MinMin
+#broker.schedulerName=PBJS
 server.port=8090
