Add simple test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ broker.dispatcherExchangeName=CTSD
 broker.registerExchangeName=CTSR
 broker.dispatcherKey=broker
 broker.registerKey=register
-broker.schedulerName=MinMin
-#broker.schedulerName=PBJS
+#broker.schedulerName=MinMin
+broker.schedulerName=PBJS
 server.port=8090
